--- a/assests/css/mobile/style.css
+++ b/assests/css/mobile/style.css
@@ -361,6 +361,146 @@ input {
     display:none
 }
 
+#booking {
+    width:400px;
+    list-style:none;
+    min-height:100%;
+    height:auto;
+    margin-left:auto;
+    margin-right:auto;
+	overflow:hidden;
+}
+
+#booking>li {
+    position:static;
+    float:left;
+    margin-right:30px
+}
+
+
+
+/* Booking Table CSS*/
+
+#day_calendar {
+	margin:0px;padding:0px;
+	width:100%;
+	box-shadow: 10px 10px 5px #888888;
+	border:1px solid #000000;
+	
+	-moz-border-radius-bottomleft:14px;
+	-webkit-border-bottom-left-radius:14px;
+	border-bottom-left-radius:14px;
+	
+	-moz-border-radius-bottomright:14px;
+	-webkit-border-bottom-right-radius:14px;
+	border-bottom-right-radius:14px;
+	
+	
+}#day_calendar table{
+    border-collapse: collapse;
+        border-spacing: 0;
+	width:100%;
+	height:100%;
+	margin:0px;padding:0px;
+	text-align:center;
+}#day_calendar tr:last-child td:last-child {
+	-moz-border-radius-bottomright:14px;
+	-webkit-border-bottom-right-radius:14px;
+	border-bottom-right-radius:14px;
+}
+#day_calendar table tr:first-child td:first-child {
+	-moz-border-radius-topleft:14px;
+	-webkit-border-top-left-radius:14px;
+	border-top-left-radius:14px;
+}
+#day_calendar table tr:first-child td:last-child {
+	-moz-border-radius-topright:14px;
+	-webkit-border-top-right-radius:14px;
+	border-top-right-radius:14px;
+}#day_calendar tr:last-child td:first-child{
+	-moz-border-radius-bottomleft:14px;
+	-webkit-border-bottom-left-radius:14px;
+	border-bottom-left-radius:14px;
+}
+#day_calendar th{
+border-bottom:1px solid #000000;
+border-left:1px solid #000000;
+}
+#day_calendar th:first-child{
+border-left:none;
+}
+#day_calendar td{
+	vertical-align:middle;
+	
+	background-color:#ffffff;
+
+	border:1px solid #000000;
+	border-width:0px 1px 1px 0px;
+	text-align:center;
+	padding:7px;
+	font-size:10px;
+	font-family:Arial;
+	font-weight:normal;
+	color:#000000;
+}#day_calendar tr:last-child td{
+	border-width:0px 1px 0px 0px;
+}#day_calendar tr td:last-child{
+	border-width:0px 0px 1px 0px;
+}#day_calendar tr:last-child td:last-child{
+	border-width:0px 0px 0px 0px;
+}
+#day_calendar tr:first-child td{
+		background:-o-linear-gradient(bottom, #ff5656 5%, #7f0000 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ff5656), color-stop(1, #7f0000) );
+	background:-moz-linear-gradient( center top, #ff5656 5%, #7f0000 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff5656", endColorstr="#7f0000");	background: -o-linear-gradient(top,#ff5656,7f0000);
+
+	background-color:#ff5656;
+	border:0px solid #000000;
+	text-align:center;
+	border-width:0px 0px 1px 1px;
+	font-size:14px;
+	font-family:Arial;
+	font-weight:bold;
+	color:#ffffff;
+}
+#day_calendar tr:first-child:hover td{
+	background:-o-linear-gradient(bottom, #ff5656 5%, #7f0000 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ff5656), color-stop(1, #7f0000) );
+	background:-moz-linear-gradient( center top, #ff5656 5%, #7f0000 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff5656", endColorstr="#7f0000");	background: -o-linear-gradient(top,#ff5656,7f0000);
+
+	background-color:#ff5656;
+}
+#day_calendar tr:first-child td:first-child{
+	border-width:0px 0px 1px 0px;
+}
+#day_calendar tr:first-child td:last-child{
+	border-width:0px 0px 1px 1px;
+}
+
+.tdNotWorking
+{
+	background:red;
+	color:white;
+	padding:5px;
+}
+
+.tdBooked
+{
+	background:purple;
+	color:white;
+	padding:5px;
+}
+
+.tdBook
+{
+	background:green;
+	text-decoration:none;
+	color:white;
+	padding:5px;
+}
+
+/* End Booking Table CSS*/
+
 /*.fliped:hover > .front
 {
 	display:none;
