Update trainer scheduling validation
and minor css changes!

--- a/assests/css/normal/style.css
+++ b/assests/css/normal/style.css
@@ -133,6 +133,21 @@ body,html {
     font-size:1.1em;
     margin:auto
 }
+#notWorkingButton2 {
+    opacity:.4;
+    width:90%;
+    border:1px #5677fc solid;
+    height:45px;
+    line-height:45px;
+    text-align:center;
+    background-color:#5677fc;
+    color:#fff;
+    cursor:default;
+    border-radius:3px;
+    font-size:1.1em;
+    margin:auto;
+	margin-top:10px;
+}
 
 .orRegister {
     cursor:pointer;
@@ -312,7 +327,8 @@ body,html {
     position:fixed;
     float:left;
     background:#9f123a;
-    margin-top:71px
+    margin-top:71px;
+	border-right:double 10px white;
 }
 
 #leftProfile> ul {
@@ -387,9 +403,9 @@ body,html {
     clear:both;
     position:absolute;
     z-index:2;
-    width:-moz-calc(100% - 260px);
-    width:-webkit-calc(100% - 260px);
-    width:calc(100% - 260px);
+    width:-moz-calc(100% - 300px);
+    width:-webkit-calc(100% - 300px);
+    width:calc(100% - 300px);
     margin-left:260px;
     height:auto;
     margin-top:150px
