--- a/assests/css/normal/style.css
+++ b/assests/css/normal/style.css
@@ -554,62 +554,70 @@ img.trainerImg {
     margin:auto
 }
 
-.Settingforms {
-    float:left;
-    width:200px;
-    margin-bottom:30px;
-    padding:10px;
-    margin-left:30px
+
+
+.Settingforms{
+	float:left;
+	width: 200px;
+	margin-bottom: 30px;
+    padding: 10px;
+	margin-left:30px;
+}
+.Settingforms > h2{
+  text-align: center;   
+    
 }
 
-.Settingforms > h2 {
-    text-align:center
+
+.Settingforms>input[type=submit]{
+    width: 190px;
+    height: 45px;
+	background-color: #FFFFFF;   
+    border: 1px #9f123a solid ;
+	color:#9f123a;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 1.1em;
 }
 
-.Settingforms>input[type=submit] {
-    width:190px;
-    height:45px;
-    background-color:#FFF;
-    border:1px #9f123a solid;
-    color:#9f123a;
-    cursor:pointer;
-    border-radius:5px;
-    font-size:1.1em
+.Settingforms>input[type=submit]:hover{
+	background-color: #9f123a;   
+    border: 1px #FFFFFF solid ;
+	color:#FFFFFF;
+}
+.Settingforms>input[type=text],.Settingforms>input[type=password],.Settingforms>input[type=email],.Settingforms>input[type=number]{
+ 
+    width: 190px;
+    height: 25px;
+    border: 2px #ebebeb solid;
+    border-radius: 3px #ebebeb solid;
+    margin-bottom: 5px;
+    text-align:center;
+	
 }
 
-.Settingforms>input[type=submit]:hover {
-    background-color:#9f123a;
-    border:1px #FFF solid;
-    color:#FFF
+.Settingforms>input[type=color]
+{
+	width: 180px;
+    margin-bottom: 10px;
+    height: 50px;
 }
 
-.Settingforms>input[type=text],.Settingforms>input[type=password],.Settingforms>input[type=email],.Settingforms>input[type=number] {
-    width:190px;
-    height:25px;
-    border:2px #ebebeb solid;
-    border-radius:3px #ebebeb solid;
-    margin-bottom:5px;
-    text-align:center
+.Settingforms>input[type=file]
+{
+    margin-bottom: 10px;
 }
 
-.Settingforms>input[type=color] {
-    width:180px;
-    margin-bottom:10px;
-    height:50px
+.Settingforms>textarea[type=text]{
+ 
+    width: 189px;
+    height: 50px;
+    border: 2px #ebebeb solid;
+    border-radius: 3px #ebebeb solid;
+    margin-bottom: 5px;
+    text-align:center;
 }
 
-.Settingforms>input[type=file] {
-    margin-bottom:10px
-}
-
-.Settingforms>textarea[type=text] {
-    width:189px;
-    height:50px;
-    border:2px #ebebeb solid;
-    border-radius:3px #ebebeb solid;
-    margin-bottom:5px;
-    text-align:center
-}
 
 .book {
     padding:0;
@@ -694,8 +702,10 @@ img.trainerImg {
 }
 
 #chartHolder {
-    width:715px;
+    width:600px;
     overflow:hidden;
+    margin-left: auto;
+    margin-right: auto;
     white-space:nowrap;
     display:inline-block
 }
