min-width for trainer table

--- a/assests/css/normal/style.css
+++ b/assests/css/normal/style.css
@@ -1,3 +1,4 @@
+
 @import "http://fonts.googleapis.com/css?family=Roboto";
 
 * {
@@ -859,6 +860,7 @@ img.trainerImg {
 #day_calendar th{
 border-bottom:1px solid #000000;
 border-left:1px solid #000000;
+    min-width: 78px;
 }
 #day_calendar th:first-child{
 border-left:none;
