--- a/assests/css/mobile/style.css
+++ b/assests/css/mobile/style.css
@@ -1018,3 +1018,9 @@ border-left:none;
 .ui-datepicker table {
     font-size:1em!important
 }
+#calendarCentre
+{
+	max-width:258px;
+	text-align:centre;
+	margin:auto;
+}
