--- a/assests/css/normal/style.css
+++ b/assests/css/normal/style.css
@@ -638,16 +638,20 @@ img.trainerImg {
 }
 
 .charts {
-    float:left;
+
     margin-top:10px;
     margin-left:15px;
-    border-radius:5px
+    border-radius:5px;
+        margin-left:auto;
+    margin-right: auto;
+    width: 700px;
 }
 
 .formHolder {
     margin-top:10px;
     float:left;
     width:200px;
+
     height:400px;
     margin:auto
 }
@@ -680,7 +684,7 @@ img.trainerImg {
 
 #chartHolder {
     width:715px;
-    overflow:hidden;
+    overflow:auto;
     white-space:nowrap;
     display:inline-block
 }
